# circle-simulation

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  build_and_run.sh  circle_simulation.sh  release.sh  release_template.md
circle_simulation/: app.hpp  circle.cpp  circle.hpp  circle_settings.hpp  circle_spawner.cpp  circle_spawner.hpp  cli.cpp  cli.hpp  cli_args.hpp  config.hpp  consts.hpp  global_config.hpp  main.cpp  renderer.cpp  renderer.hpp  sim_settings.hpp  simulation.cpp  simulation.hpp  types.hpp  user_config.hpp  utils.hpp  window.cpp  window.hpp  world.cpp  world.hpp
